--- a/i.html
+++ b/i.html
@@ -62,7 +62,7 @@
                             </p>
                             <h3>$450</h3><button class="btn2" type="onclick">Buy Now</button>
                         </div>
-                        <div class="col-md-5"><img src="imeges/banner/Untitled-2.png" class="d-block w-100" alt="..."></div>
+                        <div class="col-md-5"><img src="imeges/banner/1.png" class="d-block w-100" alt="..."></div>
                     </div>
                 </div>
                 <div class="carousel-item">
